kube/personal-resume-service.yml
apiVersion: v1
kind: Service
metadata:
  name: personal-resume
  namespace: default
  labels:
    app: personal-resume
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: personal-resume
