kube/personal-resume-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: personal-resume-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - mihai.software
    secretName: letsencrypt-prod
  rules:
  - host: mihai.software
    http:
      paths:
      - backend:
          serviceName: personal-resume
          servicePort: 80
